resolved more intellij "inspections"